--- a/style.css
+++ b/style.css
@@ -6,8 +6,19 @@
 }
 .cabecalho{
     background-color: var( --azulforte);
+    display: flex;
+    justify-content: start;
+}
+
+.menu-item{
+    display: inline-block;
+    padding: 5px;
+    margin-top: 35px;
+    color: var(--preto);
+    font-size: 20px;
 }
 
 .logo{
     width: 10%;
+    margin: 10px;
 }
