--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     --azulfraco:#BBDEFB;
     --azulforte:#1E88E5;
 }
+
+
+*{
+margin: 0%;
+padding: 0%;
+}
 .cabecalho{
     background-color: var( --azulforte);
     display: flex;
@@ -21,4 +27,28 @@
 .logo{
     width: 10%;
     margin: 10px;
+}
+
+.principal{
+    background-color: var(--azulfraco);
+    color: var(--preto);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.principal-texto{
+    padding: 0px;
+    font-size: 25px;
+    font-size: 20px;
+}
+.principal-titulo{
+    margin: 20px;
+    font-size:30px;
+    padding: 15px;
+}
+.principal-imagem{
+    width: 300px;
+    margin: 10px;
+    padding: 10px;
+
 }
